--- a/hmcts-dev-test-backend/src/main/resources/application.yaml
+++ b/hmcts-dev-test-backend/src/main/resources/application.yaml
@@ -26,20 +26,20 @@ spring:
     import: "optional:configtree:/mnt/secrets/test/"
   application:
     name: Dev Test
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/hmcts-dev
-    username: postgres
-    password: root
-    properties:
-      charSet: UTF-8
-    hikari:
-      minimumIdle: 2
-      maximumPoolSize: 10
-      idleTimeout: 10000
-      poolName: HikariCP
-      maxLifetime: 7200000
-      connectionTimeout: 30000
+  # datasource:
+  #   driver-class-name: org.postgresql.Driver
+  #   url: 
+  #   username: 
+  #   password: 
+  #   properties:
+  #     charSet: UTF-8
+  #   hikari:
+  #     minimumIdle: 2
+  #     maximumPoolSize: 10
+  #     idleTimeout: 10000
+  #     poolName: HikariCP
+  #     maxLifetime: 7200000
+  #     connectionTimeout: 30000
   jpa:
     hibernate:
       ddl-auto: update
